--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,10 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  port: 5434
+  username: postgres
+  password: postgres
+  host: localhost
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
